// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Explorer renders 1`] = `
<Explorer
  isVisible={false}
  nodes={Object {}}
  onClose={[Function]}
  path={Array []}
  popPage={[Function]}
  pushPage={[Function]}
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "unsubscribe": [Function],
    }
  }
/>
`;

exports[`Explorer renders 2`] = `<Connect(Explorer) />`;

exports[`Explorer visible 1`] = `
<Explorer
  isVisible={true}
  nodes={
    Object {
      "1": Object {
        "children": Object {
          "count": 0,
          "items": Array [],
        },
        "id": 0,
        "isError": false,
        "isFetching": true,
        "meta": Object {
          "children": Object {},
          "status": Object {
            "has_unpublished_changes": true,
            "live": false,
            "status": "",
          },
        },
      },
    }
  }
  onClose={[Function]}
  path={
    Array [
      1,
    ]
  }
  popPage={[Function]}
  pushPage={[Function]}
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "unsubscribe": [Function],
    }
  }
/>
`;

exports[`Explorer visible 2`] = `
<ExplorerPanel
  nodes={
    Object {
      "1": Object {
        "children": Object {
          "count": 0,
          "items": Array [],
        },
        "id": 0,
        "isError": false,
        "isFetching": true,
        "meta": Object {
          "children": Object {},
          "status": Object {
            "has_unpublished_changes": true,
            "live": false,
            "status": "",
          },
        },
      },
    }
  }
  onClose={[Function]}
  page={
    Object {
      "children": Object {
        "count": 0,
        "items": Array [],
      },
      "id": 0,
      "isError": false,
      "isFetching": true,
      "meta": Object {
        "children": Object {},
        "status": Object {
          "has_unpublished_changes": true,
          "live": false,
          "status": "",
        },
      },
    }
  }
  path={
    Array [
      1,
    ]
  }
  popPage={[Function]}
  pushPage={[Function]}
/>
`;
